Bug 304627 - not inline renaming option disappeared
Summary: not inline renaming option disappeared
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.1
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
: 304642 304935 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-08-05 16:50 UTC by Gernot Wieprecht
Modified: 2012-09-22 14:45 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gernot Wieprecht 2012-08-05 16:50:51 UTC
Sorry for bothering you, I am a little confused: did the option to rename files inline/not inline disappeared - or is it just my old brain and eyes that fool me? It once was in settings - general, I'm nearly sure... Now I cannot find it anymore.

I don't like the inline renaming, and want to switch back to renaming the files in the extra pop-up (which was a great usability improvement over that old shabby MS style renaming!). The renaming in the pop-up is much better because it's much easier to see (centered, in the foreground, nearer to me somehow) and to handle for me (bigger area). 

Reproducible: Always
Comment 1 Gernot Wieprecht 2012-08-05 16:58:31 UTC
And i see how I can cancel the action and save the new name. There are tons of advantages that speak for not renaming inline. Especially long names are much easier to rename not inline. It it is not in the settings anymore can I somehow enable it in some configuration file?
Comment 2 Janet 2012-08-05 21:03:46 UTC
I'm too desperately seeking for this option, I don't want inline renaming. The big advantage of the renaming box is the save and the cancel button and that you better see it. It feels more comfortable. Alas adding a "RenameInline=false" in dolphinrc doesn't change anything :(.
Comment 3 Christoph Feck 2012-08-05 21:53:48 UTC
You can find some discussion at bug 299327. Maybe with this report, we can get it back ;)
Comment 4 Frank Reininghaus 2012-08-06 01:06:40 UTC
Thanks for the bug report! It seems that there is some demand for non-inline renaming, so I'm not against bringing it back (in particular considering that the dialog still exists in the code and is used when renaming multiple files simultaneously).
Comment 5 Frank Reininghaus 2012-08-06 09:02:55 UTC
*** Bug 304642 has been marked as a duplicate of this bug. ***
Comment 6 Tanja Schulte 2012-08-06 09:56:22 UTC
Sorry, I haven't  seen that it was already reported.
Comment 7 Frank Reininghaus 2012-08-06 10:30:52 UTC
No problem! Sometimes I also have trouble to find out if something has been reported or not ;-)
Comment 8 Jekyll Wu 2012-08-10 18:09:19 UTC
*** Bug 304935 has been marked as a duplicate of this bug. ***
Comment 9 Jeroen van Meeuwen (Kolab Systems) 2012-08-24 16:21:32 UTC
Resetting assignee to default as per bug #305719
Comment 10 pagoda 2012-09-04 00:53:14 UTC
+1 for reverting to the traditional KDE method for renaming files/folders.
Comment 11 DeMus 2012-09-04 03:46:49 UTC
-1 for taking away the elegant way of renaming files/folders. Now KDE looks like the other DE's of which there are 13 in a dozen, as we say here in Holland.
I chose KDE for its elegance, its different approach, its different look, but slowly it is changing to something I don't like anymore. That's a shame. Maybe it's time to find another DE.
Comment 12 Frank Reininghaus 2012-09-04 06:11:18 UTC
(In reply to comment #11)

Please stop posting comments which are off-topic and/or destructive here. I never said that I will remove inline renaming. I'll just add an option that permits to choose between the rename dialog and inline renaming, like it was in KDE 4.7 and earlier.
Comment 13 Gernot Wieprecht 2012-09-04 09:41:33 UTC
I appreciate your work, Mr. Reinighaus. I've read your time is precious and you have little of it for the dolphin right now. I hope you can ignore blaming comments and will nonetheless re-implement the feature in one of the next releases when your time permits it, I'm patiently looking forward to it. Please forgive another off-topic comment.
Comment 14 Frank Reininghaus 2012-09-12 19:20:09 UTC
Git commit 7ca682fe903d6abfc44e2f26878e19ddc48b5633 by Frank Reininghaus.
Committed on 12/09/2012 at 21:13.
Pushed by freininghaus into branch 'KDE/4.9'.

Re-enable renaming items with the rename dialog

User feedback has shown that many users used the dialog for renaming
files. Since the dialog is still used when renaming multiple files, I
think there is no good reason not to use it for renaming single files
as well if the user wants.

Note that we cannot add an option in the settings dialog due to string
freeze issues. For the time being, you will have to add the line
"RenameInline=false" to the [General] section of
$KDEHOME/share/config/dolphinrc.
FIXED-IN: 4.9.2

M  +4    -0    dolphin/src/settings/dolphin_generalsettings.kcfg
M  +1    -1    dolphin/src/views/dolphinview.cpp

http://commits.kde.org/kde-baseapps/7ca682fe903d6abfc44e2f26878e19ddc48b5633
Comment 15 Frank Reininghaus 2012-09-12 19:25:41 UTC
It was actually surprisingly simple to fix because all the rename dialog infrastructure is still there. Note that we can't add a GUI option for this until KDE 4.10 due to string freeze issues. If you prefer to rename your files with the dialog, just open Dolphin's config file

$KDEHOME/share/config/dolphinrc

with a text editor, look for the [General] section, and add the line

RenameInline=false
Comment 16 Christoph Feck 2012-09-12 22:31:29 UTC
Merci Frank, you rock :)

I added bug 306705 as a reminder.
Comment 17 Gernot Wieprecht 2012-09-22 14:45:25 UTC
Thanks a lot!